// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CandidateDetail Snapshot with user id 1`] = `
<View
  style={
    Array [
      Object {
        "minHeight": "100%",
        "width": "100%",
      },
      Object {
        "backgroundColor": "#dd201a",
      },
    ]
  }
>
  <RCTScrollView>
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "paddingBottom": 30,
            "paddingLeft": 40,
            "paddingRight": 40,
            "paddingTop": 50,
          }
        }
      >
        <CacheableImage
          source={
            Object {
              "uri": "photoURI",
            }
          }
          style={
            Object {
              "borderRadius": 100,
              "height": 200,
              "width": 200,
            }
          }
        />
        <Text
          style={
            Object {
              "color": "#fff",
              "fontSize": 35,
              "fontWeight": "bold",
              "marginBottom": 30,
              "marginTop": 30,
            }
          }
        >
          name
        </Text>
        <Text
          style={
            Object {
              "color": "#fff",
              "fontSize": 20,
            }
          }
        >
          description
        </Text>
        <Button
          buttonStyle={
            Object {
              "backgroundColor": "#81c784",
              "borderRadius": 15,
              "marginTop": 35,
              "width": "100%",
            }
          }
          disabled={false}
          icon={
            <Icon
              color="white"
              name="vote"
              type="material-community"
            />
          }
          title="VOTE FOR ME"
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`CandidateDetail Snapshot without user id 1`] = `
<View
  style={
    Array [
      Object {
        "minHeight": "100%",
        "width": "100%",
      },
      Object {
        "backgroundColor": "#dd201a",
      },
    ]
  }
>
  <RCTScrollView>
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "paddingBottom": 30,
            "paddingLeft": 40,
            "paddingRight": 40,
            "paddingTop": 50,
          }
        }
      >
        <CacheableImage
          source={
            Object {
              "uri": "photoURI",
            }
          }
          style={
            Object {
              "borderRadius": 100,
              "height": 200,
              "width": 200,
            }
          }
        />
        <Text
          style={
            Object {
              "color": "#fff",
              "fontSize": 35,
              "fontWeight": "bold",
              "marginBottom": 30,
              "marginTop": 30,
            }
          }
        >
          name
        </Text>
        <Text
          style={
            Object {
              "color": "#fff",
              "fontSize": 20,
            }
          }
        >
          description
        </Text>
        <Button
          buttonStyle={
            Object {
              "backgroundColor": "#81c784",
              "borderRadius": 15,
              "marginTop": 35,
              "width": "100%",
            }
          }
          disabled={true}
          icon={
            <Icon
              color="white"
              name="vote"
              type="material-community"
            />
          }
          title="VOTE FOR ME"
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;
